--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -3,3 +3,15 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+canvas:focus {
+  outline: none;
+}
+
+.container.wide {
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+    margin-right: 0;
+    margin-left: 0;
+}
